# sinfonia-loadtest-app

./: .gitignore  Dockerfile  README.md  pyproject.toml
charts/loadtest/: values.yaml
charts/loadtest/templates/: deployment.yaml  hpa.yaml  ingress.yaml  serviceaccount.yaml
src/: config.yml  main.py
src/api/: router.py
src/api/core/: health.py
src/api/v1/: matmul.py  router.py
src/core/: di.py
src/domain/logger/: formatter.py  logger.py
src/lib/format/: __init__.py  http.py  str.py
src/lib/http/: __init__.py  resp.py
src/schema/: base.py
src/service/: __init__.py  bigmath.py  maths.py
src/service/fake/: __init__.py  static.py
src/service/fake/data/: matrix10.txt  matrix100.txt  matrix150.txt  matrix200.txt  matrix25.txt  matrix250.txt  matrix300.txt  matrix350.txt  matrix400.txt  matrix450.txt  matrix5.txt  matrix50.txt  matrix500.txt  matrix550.txt  matrix600.txt  matrix650.txt  matrix700.txt  matrix75.txt  matrix750.txt  matrix800.txt  matrix850.txt  matrix900.txt  matrix950.txt
src/types/: maths.py
tests/: test_matmul.py
