[tool.poetry]
name = "sinfonia-loadtest-app"
version = "1.0.0"
description = "Carbon load-test application on the Sinfonia orchestration framework."
authors = ["k2nt <khai.tnguyen@outlook.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.109.2"}
dependency-injector = "^4.41.0"
uvicorn = "^0.27.1"
colorama = "^0.4.6"
requests = "^2.31.0"
pydantic = "^2.6.1"
numpy = "^1.26.4"
setuptools = "^69.1.0"
pytest = "^8.0.0"

[tool.poetry.scripts]
start-app = "src.main:start_app"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
